<resources>
    <string name="app_name">PersonalLearningApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="confirm_email">Confirm email</string>
    <string name="sign_up">Sign up</string>
    <string name="your">Your</string>
    <string name="interests">Interests</string>
    <string name="select_up_to_10_choices">Select up to 10 choices</string>
    <string name="submit">Submit</string>
    <string name="algorithms">Algorithms</string>
    <string name="data_structures">Data Structures</string>
    <string name="dev_ops">Dev-Ops</string>
    <string name="agile_methodology">Agile Methodology</string>
    <string name="tdd">TDD</string>
    <string name="software_architecture">Software Architecture</string>
    <string name="microservices">Microservices</string>
    <string name="containerization">Containerization</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="version_control">Version Control</string>
    <string name="security">Security</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="web_development">Web Development</string>
    <string name="design_patterns">Design Patterns</string>
    <string name="time_complexity">Time Complexity</string>
    <string name="testing">Testing</string>
    <string name="hello">Hello,</string>
    <string name="name">Name</string>
    <string name="hello_name">Hello name</string>
    <string name="generated_task_1">Generated task 1</string>
    <string name="this_is_the_description_of_the_task_this_is_the_desccription_of_the_task_this_is_the_descripton_of_the_task">this is the description of the task, this is the desccription of the task this is the descripton of the task</string>
    <string name="start">Start</string>
    <string name="loading">Loading...</string>
    <string name="your_results">Your Results</string>
    <string name="description">description</string>
    <string name="finish">Finish</string>
</resources>