<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Signup.SignupActivity"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="30sp">
        <ImageView
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_marginBottom="30sp"
            android:src="@drawable/login_background_circle_blue_shadow" />
        <ImageView
            android:layout_width="120sp"
            android:layout_height="130sp"
            android:layout_marginTop="-155sp"
            android:layout_marginBottom="20sp"
            android:src="@drawable/login_stock_user_image" />
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/first_name"
            android:id="@+id/first_name_input"
            android:inputType="text"/>
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/last_name"
            android:id="@+id/last_name_input"
            android:inputType="text"/>
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/username"
            android:id="@+id/username_input"
            android:inputType="text"/>
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/email"
            android:id="@+id/email_input"
            android:inputType="text"/>
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/confirm_email"
            android:id="@+id/confirm_email_input"
            android:inputType="text"/>
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/password"
            android:id="@+id/password_input"
            android:inputType="textPassword"/>
        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextInputEditText"
            android:hint="@string/confirm_password"
            android:id="@+id/confirm_password_input"
            android:inputType="textPassword"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:id="@+id/signup_button"
            android:background="@drawable/login_button_background"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="30sp"
            android:textSize="20sp"
            android:onClick="registerUser"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>