<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Signup.UserInterestSelectionActivity"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/your_text"
            android:text="@string/your"
            android:gravity="start"
            android:textSize="50sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/interests_text"
            android:gravity="start"
            android:text="@string/interests"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/interests_text"
            android:gravity="start"
            android:text="@string/select_up_to_10_choices"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interest_selector_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/algorithms"
                android:id="@+id/algorithms_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/data_structures"
                android:id="@+id/data_structures_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="139sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/dev_ops"
                android:id="@+id/dev_ops_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/agile_methodology"
                android:id="@+id/agile_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/software_architecture"
                android:id="@+id/architecture_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/tdd"
                android:id="@+id/tdd_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="139sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/microservices"
                android:id="@+id/microservices_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/containerization"
                android:id="@+id/containerization_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/cloud_computing"
                android:id="@+id/cloud_computing_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/version_control"
                android:id="@+id/version_control_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="139sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/security"
                android:id="@+id/security_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/mobile_development"
                android:id="@+id/mobile_dev_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/web_development"
                android:id="@+id/web_dev_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/design_patterns"
                android:id="@+id/design_patterns_button"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3sp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="139sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/time_complexity"
                android:id="@+id/time_complexity_button"
                android:textColor="@color/white"
                android:layout_marginEnd="2sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:background="@drawable/user_input_background"
                android:text="@string/testing"
                android:id="@+id/testing_button"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        app:layout_constraintTop_toBottomOf="@id/interest_selector_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/submit_button_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="40sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>